--- a/src/posts/llm-tutorial.mdx
+++ b/src/posts/llm-tutorial.mdx
@@ -1,9 +1,11 @@
----
-title: "How to Build a Blog with LLMs"
-date: "2025-04-14"
-author: "Saurav Singh"
----
+## What is an LLM?
 
-![alt text](../../public/Embeddings.png)
+A large language model (LLM) is a type of deep learning model trained on vast amounts of text data.
 
-This blog shows how to use LLMs and Next.js to create dynamic websites from Markdown.
+### Applications
+
+- Question answering
+- Text summarization
+- Document classification
+
+LLMs like GPT, LLaMA, and Mistral are powering modern generative AI applications.
