--- a/src/posts/llm-tutorial.mdx
+++ b/src/posts/llm-tutorial.mdx
@@ -1,3 +1,5 @@
+<img src="/llm.png" alt="LLM Image" width="600" height="600" />
+
 ## What is an LLM?
 
 A large language model (LLM) is a type of deep learning model trained on vast amounts of text data.
